--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,8 +5,11 @@ spring:
         config:
             server:
                 git:
-                    uri: <your-config-repo-github-url>
-                    default-label: main
+                    uri: https://github.com/oumabaros/config-repo
+                    default-label: master
+                    timeout: 5
+                    clone-on-start: true
+                    force-pull: true
 server:
     port: 8888
     tomcat:
